[package]
name = "dog3"
version = "0.1.0"
edition = "2021"
authors = ["Henrique Colini <henriquecolini@gmail.com>"]

[dependencies]
clap = { version = "4.3.3", features = ["derive"] }
itertools = "0.11.0"
minreq = { version = "2.11.0", features = ["https"] }
pest = "2.0"
pest_derive = "2.0"
rand = "0.8.5"
serde = {version = "1.0.190", features = ["derive"]}
serde_json = "1.0.107"
regex = "1.11.1"

[[bin]]
name = "dog3"
